--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 	"start": "webpack serve --mode development",
 	"build": "webpack --mode production",
+        "deploy": "npm run build && gh-pages -d dist",
 	"lint": "eslint src --ext .js",
 	"format": "prettier --write \"src/**/*.{js,css}\""
 	},
